# DogFoodTracker-Codex

./: README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
examples/: example_request.json
frontend/: app.js  index.html  styles.css
src/dog_meal_planner/: __init__.py  aafco.py  api.py  models.py  nutrition.py  storage.py  usda.py
src/dog_meal_planner/db/: schema.sql
tests/: test_nutrition.py
