[project]
name = "dog-meal-planner"
version = "0.1.0"
description = "Backend service for computing dog meal plans from nutrition data."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "requests>=2.31",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
